--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.553.0",
-    "next": "^16.0.2",
+    "next": "^16.1.0",
     "pizzip": "^3.2.0",
     "quill": "^2.0.3",
     "react": "^19.2.0",
@@ -33,7 +33,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.22",
     "eslint": "^9",
-    "eslint-config-next": "16.0.2",
+    "eslint-config-next": "^16.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
     "typescript": "^5"
